--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4546,3 +4546,18 @@ only screen and (				min-resolution: 2dppx) {
 #youtube-wrap {position: relative;height: 100vh;width: 100%;}
 #youtube-wrap1 {position: relative;height: 100vh;width: 100%;}
 }
+
+.feature-img-small {
+	max-width: 100%;
+	height: 100vh;
+	width: auto;
+	object-fit: contain;
+	display: block;
+	margin: 0 auto;
+}
+
+@media only screen and (max-width: 768px) {
+	.feature-img-small {
+		height: 60vh;
+	}
+}
